--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less.erb
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less.erb
@@ -11,6 +11,7 @@ body {
   padding-top: 60px; 
   background-image: url('pw_maze_white.png');
   background-repeat:repeat;
+  font-family: 'Noto Sans', sans-serif;
 }
 @import "twitter/bootstrap/responsive";
 
