Full-text search

--- a/app/assets/stylesheets/main.css.less.erb
+++ b/app/assets/stylesheets/main.css.less.erb
@@ -56,8 +56,16 @@ body {
 
 //bootstrap overrides
 
+.input-prepend {
+  margin-bottom: 0px;
+}
+
+form {
+  margin: 0px;
+}
+
 a {
-  color: #8B0000;
+  color: @maroon;
 }
 
 .text_field{
@@ -99,6 +107,10 @@ html {
 
 //navbar
 
+#search-posts{
+  margin-right: 36px;
+}
+
 .navbar .brand:hover{
   opacity: 1;
 }
@@ -118,13 +130,13 @@ html {
  
 .navbar a:hover{ 
   text-decoration: none; 
-  color: @white; 
+  color: @grey; 
 }
 
 
 .navbar .nav li.dropdown.open .dropdown-toggle{
   background-color: transparent;
-  color: @white;
+  color: @maroon;
 }
 
 .user_thumb_small{
