--- a/app/views/shared/navbar/_user_links.html.erb
+++ b/app/views/shared/navbar/_user_links.html.erb
@@ -4,6 +4,9 @@
       <%= render 'shared/navbar/user_links/user_dropdown'%> 
     </ul>
     <%= render 'shared/navbar/user_links/user_thumb'%>
+    <ul class="nav pull-right">
+      <%= render 'shared/search_field/search_field'%> 
+    </ul>
   <% else %>
     <ul class="nav pull-right">
       <%= render 'shared/navbar/user_links/sign_in_with_fb_link' %>
