--- a/app/assets/stylesheets/main.css.less.erb
+++ b/app/assets/stylesheets/main.css.less.erb
@@ -56,6 +56,16 @@ body {
 
 //bootstrap overrides
 
+::-moz-selection{
+  background: @dark-green;
+  color: @white;
+} 
+
+::selection {
+  background: @dark-green;
+  color: @white;
+}
+
 .input-prepend {
   margin-bottom: 0px;
 }
