--- a/app/views/posts/post/_other.html.erb
+++ b/app/views/posts/post/_other.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid other-div">
   <div>
-    <div class="fb-like" data-href="http://www.facebook.com/groups/NarinigKoSaUP/permalink/<%= post.fb_id.split('_')[1] %>" data-show-faces="true" data-font="arial"></div>
+    <%= render 'posts/post/likes', post: post if current_user%>
   </div>
   <div class="span6 offset6">
     <%= render 'shared/asker', post: post %>
