--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,9 @@
 <footer>
-  <p></p>
+  <div class="row-fluid">  
+    <div class="span2"></div>
+    <div class="span8 well-large small-grey-text footer">
+      <span><%= t('.message').html_safe %></span>
+    </div>
+    <div class="span2"></div>
+  </div>
 </footer>
