--- a/app/assets/stylesheets/main.css.less.erb
+++ b/app/assets/stylesheets/main.css.less.erb
@@ -19,6 +19,8 @@ body {
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
 @iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
 
+@import "fontawesome/font-awesome";
+
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled bootstrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
@@ -26,10 +28,9 @@ body {
 @fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot?#iefix&v=3.0.2");
 @fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff?v=3.0.2");
 @fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf?v=3.0.2");
-@import "fontawesome";
+@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
 
 // Font Awesome
-@import "fontawesome";
 
 // Glyphicons
 @import "twitter/bootstrap/sprites.less";
